# CSD2

./: .gitignore  README.md  hello.txt  text.txt
CSD2a/: helloworld.py
CSD2a/python_basics/: .gitignore  Alias  helloworld.py  idee_in_text.txt  playsound.py  random.py  ritmische player.py
CSD2a/python_basics/event_based_sequencer/: event_based_sequencer.py  tester.py
CSD2a/python_basics/irregual_beat_generator/: _main.py  event_based_sequencer.py  generator.py  generator_2.py  irregual_beat_generator.py  link_for_presentation.txt  midi_file_generator.py  question_line.py  test.py
CSD2a/python_basics/kennismaking_python/: helloworld.py  playsound.py
CSD2b/: _Aantekeningen.txt  convert.py
CSD2b/C++_basics/: woofer  woofer.cpp  woofer_2
CSD2c/Effect_Base_Class/: Aantekeningen.txt  Effect.cpp  Effect.h  Waveshaper.cpp  Waveshaper.h
CSD2c/Project/: CircBuffer.cpp  CircBuffer.h  Delay.cpp  Delay.h  Effect.cpp  Effect.h  Makefile  Utillities.h  delay.cpp  delay.h  effect.cpp  effect.h  main.cpp  sine.h  tremolo.cpp  waveshaper.cpp  waveshaper.h
CSD2c/Test/: .gitignore  CMakeLists.txt  CircBuffer.cpp  Delay.cpp  Delay.h  Effect.cpp  Effect.h  Makefile  Tremolo.cpp  Tremolo.h  Utillities.h  chorus.h  circBuffer.cpp  circBuffer.h  delay.cpp  delay.h  effect.cpp  effect.h  main.cpp  sine.h  tremolo.cpp  tremolo.h  utillities.h  waveshaper.cpp  waveshaper.h
CSD2c/Test/include/: delay.h  effect.h  jack_module.h  tremolo.h
CSD2c/Test/src/: chorus.cpp  main.cpp
DSP/: FFT  FFT.cpp  Makefile  a.csv  a.py  p.csv  p.py  roel.py
DSP/test/: Makefile  app  main.cpp
(+231 files in other folders)
